Updated video attribute

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       				<h1><span>50 Years Of Successful Business</span></h1>
       				<p></p>
       				<div class="video">
-				        <video autoplay="true" loop="true" controls="false" class="img-responsive" poster="placeholder.jpg">
+				        <video controls autoplay loop muted playsinline class="img-responsive" poster="placeholder.jpg">
 				            <source src="seb.webm" type="video/webm" />
 				            <source src="seb.mp4" type="video/mp4" />
 				        </video>
