--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
 		<br>
 
 		<div class="container-fluid homeSecondBlock">
-			<h2>50 Years of Excellence Service providing quality around every corner</h2>
+			<h2>50 Years of Excellent Service Providing Quality Around Every Corner</h2>
 		</div>
 
 		<div class="container homeThirdBlock">
@@ -109,7 +109,7 @@
 				<div class="col-md-4">
 					<div class="quoteDiv">
 						<i class="fa fa-quote-left" aria-hidden="true"></i>
-						<p class="quotePara">SoutheEast Broach is an incredible company. They provide high quality services that give a lasting impression for years to come.</p>
+						<p class="quotePara">SouthEast Broach is an incredible company. They provide high quality services that give a lasting impression for years to come.</p>
 						<i class="fa fa-quote-right" aria-hidden="true"></i>
 					</div>
 					<div class="quoteProfile">
@@ -120,7 +120,7 @@
 				<div class="col-md-4">
 					<div class="quoteDiv">
 						<i class="fa fa-quote-left" aria-hidden="true"></i>
-						<p class="quotePara">SoutheEast Broach is an incredible company. They provide high quality services that give a lasting impression for years to come.</p>
+						<p class="quotePara">SouthEast Broach is an incredible company. They provide high quality services that give a lasting impression for years to come.</p>
 						<i class="fa fa-quote-right" aria-hidden="true"></i>
 					</div>
 					<div class="quoteProfile">
@@ -131,7 +131,7 @@
 				<div class="col-md-4">
 					<div class="quoteDiv">
 						<i class="fa fa-quote-left" aria-hidden="true"></i>
-						<p class="quotePara">SoutheEast Broach is an incredible company. They provide high quality services that give a lasting impression for years to come.</p>
+						<p class="quotePara">SouthEast Broach is an incredible company. They provide high quality services that give a lasting impression for years to come.</p>
 						<i class="fa fa-quote-right" aria-hidden="true"></i>
 					</div>
 					<div class="quoteProfile">
